todo-app-backend/manifests/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-backend-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-backend
  template:
    metadata:
      labels:
        app: todo-app-backend
        common: todo-app
    spec:  
      nodeSelector:
        kubernetes.io/hostname: k3d-mooc-agent-0
      containers:
        - name: todo-app-backend
          image: temibonn/todo-app-backend:v2.0.3
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
