todo-app-backend/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: project
spec:
  clusterIP: None
  selector:
    app: postgres-db
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
