todo-app-backend/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
spec:
  rules:
    - http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-app-svc
                port: 
                  number: 3000
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todo-app-svc
                port: 
                  number: 3001
